--- a/index.html
+++ b/index.html
@@ -72,6 +72,29 @@
 
 			</section>
 		</main>
+
+		<section class="container">
+			<h2 id="titulo-form">Adicionar novo paciente</h2>
+			<form id="form-adiciona">
+				<div class="">
+					<label for="nome">Nome:</label>
+					<input id="nome" type="text" placeholder="digite o nome do paciente" class="campo">
+				</div>
+				<div class="grupo">
+					<label id="peso" for="peso">Peso:</label>
+					<input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
+				</div>
+				<div class="grupo">
+					<label id="altura" for="altura">Altura:</label>
+					<input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
+				</div>
+
+				<button id="adicionar-paciente" class="botao bto-principal"> Adicionar</button>
+				
+
+			</form>
+		</section>
+
 		<script src="js/principal.js"></script>
 	</body>
 </html>
